empresa de estudos e treinamento

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Empresa 2024</title>
+    <title>Empresa de estudos e jogos </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body> 
   <header>     
@@ -20,14 +21,14 @@
     <section id="section1">
         <h2>Seção 1</h2>
         <p>Conteúdo da seção 1.</p>  
-    </section>
+    </section>Empresa de estudo e treinamentos de jogos e campionatos venha se juntar a nos Empresa
     <section id="section2">
         <h2>Seção</h2>
         <p>conteído da seção 2.</p>
-    </section>
+    </section>esta Empresa ira de ajudar nos treinamentos estudos lugares que tenha silencio para vc estudar 
     <section id="section3">
         <p>Conteúdo da seção 3.</p>
-    </section>
+    </section>estamos te esperando voçes aqui na Empresa,estudos e treinamentos de jogos e estudos vamos fezer isso juntos 
 </main>
   <footer>
     <p>&copy;2024 Minha Empresa.Todos os difeitos reservados.</p>
